fix(content.article): revise spacing
ref:
production-pre-test#PR-006

--- a/src/common/styles/utils/content.article.css
+++ b/src/common/styles/utils/content.article.css
@@ -7,14 +7,12 @@
   line-height: var(--line-height-article-base);
   outline: none;
 
-  & > p,
-  & > ul,
-  & > ol {
-    padding: var(--ar17-100) 0;
+  & > *:first-child {
+    margin-top: var(--ar17-200);
   }
 
-  & > *:last-child {
-    margin-bottom: var(--sp24);
+  & > * + * {
+    margin: var(--ar17-200) 0;
   }
 
   & p {
@@ -58,8 +56,7 @@
    ========================================================================== */
   & figure {
     position: relative;
-    padding: var(--ar17-200) 0;
-    margin: 0;
+    margin: var(--ar17-200) 0;
     text-align: center;
 
     /* ad-hoc fix for nested figure */
@@ -299,7 +296,6 @@
   & h4,
   & h5,
   & h6 {
-    padding-top: var(--ar17-100);
     font-weight: var(--font-semibold);
     line-height: var(--line-height-article-heading);
   }
@@ -337,7 +333,8 @@
     position: relative;
     display: block;
     width: 100%;
-    height: calc(var(--ar17-150) * 2 + var(--sp8));
+    height: var(--sp8);
+    margin: calc(var(--ar17-150) + var(--ar17-100)) auto;
     border: none;
 
     &::before {
@@ -346,7 +343,6 @@
       display: block;
       width: 3.5rem;
       height: var(--sp8);
-      padding: var(--ar17-150) 0;
       margin: 0 auto;
       content: '';
       background-image: radial-gradient(
